# binex

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  context7.json  demo-custom.tape  demo-explore.tape  demo-start.tape  demo.tape  index.html  mkdocs.yml  pyproject.toml  record-demo.sh  sitemap.xml
.claude/commands/: speckit.implement.md  speckit.specify.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  e2e.yml
architecture/adapters/: index.html
architecture/overview/: index.html
architecture/runtime/: index.html
architecture/stores/: index.html
architecture/telemetry/: index.html
cli/artifacts/: index.html
cli/bisect/: index.html
cli/budget-guide/: index.html
cli/cost/: index.html
cli/debug/: index.html
cli/dev/: index.html
cli/diagnose/: index.html
cli/diff/: index.html
cli/doctor/: index.html
cli/explore/: index.html
cli/export/: index.html
cli/gateway/: index.html
cli/plugins/: index.html
cli/replay/: index.html
cli/run/: index.html
cli/scaffold/: index.html
cli/start/: index.html
cli/trace/: index.html
cli/validate/: index.html
cli/workflow/: index.html
concepts/agents/: index.html
concepts/artifacts/: index.html
concepts/execution/: index.html
concepts/lineage/: index.html
concepts/workflows/: index.html
contributing/development/: index.html
contributing/testing/: index.html
demo/: index.html
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  litellm_config.yaml
docs/: demo.md  index.md  multi-provider.md  quickstart.md
docs/architecture/: adapters.md  overview.md  runtime.md  stores.md  telemetry.md
docs/cli/: artifacts.md  bisect.md  budget-guide.md  cost.md  debug.md  dev.md  diagnose.md  diff.md  doctor.md  explore.md  export.md  gateway.md  plugins.md  replay.md  run.md  scaffold.md  start.md  trace.md  validate.md  workflow.md
docs/concepts/: agents.md  artifacts.md  execution.md  lineage.md  workflows.md
docs/contributing/: development.md  testing.md
docs/plans/: 2026-03-07-a2a-protocol-design.md  2026-03-07-binex-design.md  2026-03-09-launch-strategy-design.md  2026-03-11-custom-workflow-wizard-design.md  2026-03-11-custom-workflow-wizard-plan.md  2026-03-11-system-prompt-file-design.md  2026-03-11-system-prompt-file.md  2026-03-12-bisect-intuitive-ux-design.md  2026-03-12-bisect-intuitive-ux-impl.md  2026-03-13-a2a-gateway-design.md  2026-03-13-full-project-refactor-design.md  2026-03-13-full-project-refactor-plan.md
docs/workflows/: examples.md  format.md
examples/: a2a-multi-agent.yaml  autogen-coding-team.yaml  budget-hard-limit.yaml  budget-per-node.yaml  budget-warn-monitor.yaml  chain-with-review.yaml  conditional-routing.yaml  crewai-research-crew.yaml  diamond.yaml  draft-review-approve.yaml  error-handling.yaml  fan-in.yaml  fan-out-fan-in.yaml  fan-out.yaml  file-prompt.yaml  gemini-research.yaml  hello-world.yaml  human-feedback.yaml  human-in-the-loop.yaml  langchain-summarizer.yaml  map-reduce.yaml  mixed-framework-pipeline.yaml  multi-provider-demo.yaml  multi-provider-research.yaml  multi-stage.yaml  ollama-research.yaml  research.yaml  secure-pipeline.yaml  simple.yaml
examples/myproject/: __init__.py  chains.py  crews.py  teams.py
examples/prompts/: chunk-merger.md  chunk-processor.md  chunk-splitter.md  consumer.md  content-editor.md  content-reviewer.md  content-reviser.md  data-aggregator.md  data-processor.md  data-refiner.md  draft-writer.md  gen-data-aggregator.md  gen-research-validator.md  producer.md  research-planner.md  research-synthesizer.md  research-validator.md  researcher.md
multi-provider/: index.html
qa/custom/: workflow.yaml
qa/my-decision-pipeline/: workflow.yaml
qa/test2/: .gitignore  workflow.yaml
quickstart/: index.html
scripts/: build-ui.sh
scripts/demo/: convert.sh  demo_build_debug.py  demo_full_walkthrough.py  demo_live_research_run.py  demo_new_user.py  demo_research_pipeline.py  record_session.py
search/: search_index.json
specs/001-binex-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/binex/: __init__.py  export.py  settings.py  telemetry.py  tools.py  webhook.py
tests/: conftest.py
tests/docs/: BUG-TRACKING-v2.csv  BUG-TRACKING.csv  E2E-TEST-EXECUTION-TRACKING.csv  QA-E2E-TEST-PLAN.md  QA-TEST-PLAN-v2.md  QA-TEST-PLAN-v3.md  QA-TEST-PLAN-v4.md  QA-TEST-PLAN-v5.md  QA-TEST-PLAN-v6.md  QA-TEST-PLAN.md  TEST-EXECUTION-TRACKING-v2.csv  TEST-EXECUTION-TRACKING-v3.csv  TEST-EXECUTION-TRACKING-v4.csv  TEST-EXECUTION-TRACKING-v5.csv  TEST-EXECUTION-TRACKING-v6.csv  TEST-EXECUTION-TRACKING.csv
tests/e2e/: conftest.py  test_e2e_budget_cost.py  test_e2e_cli_journey.py  test_e2e_data_integrity.py  test_e2e_error_handling.py  test_e2e_export.py  test_e2e_plugins.py  test_e2e_workflow_lifecycle.py
tests/e2e_playwright/: record_demo.py  run_all.py  test_cost_dashboard.py  test_diff_bisect.py  test_export.py  test_navigation.py  (+5 more)
ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+471 files in other folders)
