[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binex"
version = "0.2.0"
description = "Debuggable runtime for AI agent pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alex Li", email = "alexli18@users.noreply.github.com"},
]
keywords = ["ai", "agents", "workflow", "orchestration", "debugging", "llm", "dag", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "a2a-sdk",
    "litellm",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic>=2.0",
    "pyyaml",
    "click",
    "aiosqlite",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/Alexli18/binex"
Documentation = "https://alexli18.github.io/binex/"
Repository = "https://github.com/Alexli18/binex"
Issues = "https://github.com/Alexli18/binex/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "mkdocs-material",
]
rich = ["rich"]

[tool.hatch.build.targets.wheel]
packages = ["src/binex"]

[project.scripts]
binex = "binex.cli.main:main"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
